# gateway

./: .dockerignore  .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  alphaTestnetChainSpec.json  alphaTestnetChainSpecRaw.json  base_types.json  compoundChainSpec.json  compoundChainSpecRaw.json  customSpec.json  customSpecRaw.json  docker-compose.yml  fuzzbuzz.yaml  gatewayChainSpec.json  gatewayChainSpecRaw.json  m.json  myCustomSpec.json  rpc.json  scratch.py  types.json
.circleci/: config.yml
.github/workflows/: release-workflow.yaml  release-workflow.yml  test-workflow.yml
certora/: readme.txt  runCashToken.sh  runCashTokenHarness.sh  runPrivileged.sh  runSanity.sh  runSanityAssume.sh  runStarportHarness.sh  runStarportHarnessOrdering.sh
certora/contracts/: CashToken.sol  CashTokenHarness.sol  ICash.sol  Starport.sol  StarportHarness.sol  StarportHarnessOrdering.sol
certora/spec/: CashToken.spec  CashTokenHarness.spec  Privileged.spec  Starport.spec  StarportOrdering.spec  erc20.spec  sanitySound.spec
chains/: README.md  build_spec.js  package.json  repl.js  saddle.config.js
chains/scripts/: README.md  add_users.js
chains/stablenet/: chain-config.json  chain-spec-raw.json  chain-spec.json
chains/testnet/: chain-config.json  chain-spec-raw.json  chain-spec.json
compound-crypto/: Cargo.toml
compound-crypto/src/: aws_kms.rs  lib.rs  no_std.rs  std.rs
ethereum/: .gitignore  README.md  deploy.js  hardhat.config.js  jest.config.js  package.json  saddle.config.js
ethereum-client/: Cargo.toml
ethereum-client/src/: events.rs  hex.rs  lib.rs
ethereum/.build/: FiatTokenV1.json  FiatTokenV2.json  bat.json  contracts.json  dai.json  goerli.json  usdc.json  wbtc.json  zrx.json
ethereum/contracts/: CashToken.sol  Exponent.sol  Fraction.sol  FractionMath.sol  ICash.sol  IERC20.sol  MockCashToken.sol  SafeMath.sol  Starport.sol
ethereum/networks/: goerli-abi.json  goerli.json  ropsten-abi.json  ropsten.json
ethereum/scripts/: deploy.js
ethereum/test/: cash_token_test.js  matchers_ext.js  starport_test.js  utils.js
ethereum/tests/: CashTokenTest.js  StarportTest.js  cash_test.js  cash_token_test.js  matchers_ext.js  starport_test.js  utils.js
ethereum_client/: Cargo.toml
ethereum_client/src/: lib.rs
flow/: .gitignore  flow.json
flow-client/: Cargo.toml
flow-client/src/: events.rs  lib.rs
flow/fcl/: get_locked_balance.js  lock_flow_tokens.js  setup_starport_user.js
flow/flow-fetcher/: README.md  blocks.go  events.go  go.mod  go.sum  helpers.go  main.go
flow/test/: README.md  crypto_test.js  flow.signer.js  jest.config.js  package.json  starport.test.js  test1.js
gateway-crypto/: Cargo.toml
gateway-crypto/src/: dev.rs  no_std.rs  std.rs
integration/: README.md  babel.config.json  integration_test.js  jest.config.js  package.json  repl.js
integration/__tests__/: authorities_test.js  borrow_scen.js  cash_scen.js  dissent_and_concordance_scen.js  ethereum_scen.js  extract_scen.js  golden_test.js  gov_scen.js  gov_test.js  liquidate_scen.js  liquidity_scen.js  lock_scen.js  lock_test.js  magic_test.js  matic_scen.js  notice_scen.js  price_scen.js  prices_scen.js  reorg_scen.js  session_scen.js  set_future_yield_scen.js  starport_upgrade_scen.js  supply_cap_scen.js  testnets_scen.js  transfer_scen.js  upgrade_1_3_1_scen.js  upgrade_scen.js  upgrade_to_131_scen.js  upgrade_to_m10__hardfork_scen.js  upgrade_to_m11_fork_scen.js  upgrade_to_m3_scen.js  upgrade_to_m4_scen.js  upgrade_to_m8_scen.js  upgrade_to_m9_m10_scen.js  upgrade_to_m9_scen.js  version_m8.js
integration/repl/: testnet.json
integration/util/: download.js  ethereum.js  jest.js  log.js  net.js  scenario.js  substrate.js  test.js  types.js  util.js  (+1 more)
node/: Cargo.toml
node/src/: api.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
open-oracle-mock-reporter/: Cargo.toml
ops/: ARCHITECTURE.md  README.md  compound-chain.j2  generate_inv.py  main.tf  ssh_config.template
our-std/: Cargo.toml  README.md  with_std.rs  without_std.rs
our-std/proc-macro/src/: lib.rs
our-std/src/: consts.rs  fixed_width.rs  lib.rs  log.rs
pallets/cash/: Cargo.toml  README.md
pallets/cash/fuzz/: Cargo.toml  README.md
pallets/cash/fuzz/fuzz_targets/: chain_account_from_str_fuzz.rs  trx.rs
pallets/cash/runtime-api/: Cargo.toml
pallets/cash/runtime-api/src/: lib.rs
pallets/cash/src/: account.rs  amount.rs  benchmarking.rs  calculation.rs  chains.rs  converters.rs  core.rs  ecdsa_eth.rs  effectful.rs  events.rs  factor.rs  fixed_precision_number.rs  generic_util.rs  lib.rs  log.rs  mock.rs  mocks.rs  notices.rs  oracle.rs  params.rs  pipeline.rs  portfolio.rs  primitives.rs  rate.rs  rates.rs  reason.rs  require.rs  runtime_interface.rs  serdes.rs  sig.rs  symbol.rs  testdata.rs  tests.rs  trx_req.rs  types.json  types.rs  weights.rs
pallets/cash/src/internal/: assets.rs  balance_helpers.rs  change_validators.rs  events.rs  exec_trx_request.rs  extract.rs  initialize.rs  liquidate.rs  liquidity.rs  lock.rs  miner.rs  mod.rs  next_code.rs  notices.rs  oracle.rs  oracle_inherent.rs  set_yield_next.rs  supply_cap.rs  transfer.rs  validate_trx.rs
pallets/cash/src/tests/: assets.rs  common.rs  extract.rs  mock.rs  mod.rs  ocw.rs  protocol.rs  testdata.rs  worker.rs
pallets/config/: Cargo.toml
pallets/config/src/: lib.rs
pallets/runtime-interfaces/: Cargo.toml
pallets/runtime-interfaces/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: benchmark.sh  build_release.sh  build_spec.sh  build_types.sh  generate_patch_for_all_of_substrate.py  get_substrate.sh  init.sh  list_executables.py  pkg_config.sh  pull_release.sh  spline.py  start_chain.sh
std/: Cargo.toml  with_std.rs  without_std.rs
std/proc-macro/: Cargo.toml
std/proc-macro/src/: lib.rs
std/src/: lib.rs
test-utils/open-oracle-mock-reporter/: Cargo.toml
test-utils/open-oracle-mock-reporter/src/: main.rs
timestamp/: Cargo.toml
timestamp/src/: lib.rs
trx-request/: Cargo.toml
types-derive/: Cargo.toml
types-derive/src/: lib.rs
(+157 files in other folders)
