[profile.dev]
split-debuginfo = 'unpacked'

[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'pallets/cash',
    'pallets/oracle',
    'pallets/runtime-interfaces',
    'runtime',
    'our-std',
    'gateway-crypto',
    'ethereum-client',
    'flow-client',
    'test-utils/open-oracle-mock-reporter',
    'trx-request',
    'types-derive',
]
