[package]
authors = ['Compound <https://compound.finance>']
description = 'Cryptographic operations for compound chain'
edition = '2018'
homepage = 'https://compound.cash'
name = 'compound-crypto'
repository = 'https://github.com/compound-finance/compound-chain/'
version = '1.0.0'

[dependencies]
sp-core = { version = '2.0.0', git = 'https://github.com/compound-finance/substrate.git' }
libsecp256k1 = { version = "0.3.2" }
tiny-keccak = { version = "2.0.0", features = ["keccak"], default-features = false }
hex = { version = "0.4.2" }