[package]
authors = ['Compound <https://compound.finance>']
description = 'Cryptographic operations for compound chain'
edition = '2018'
homepage = 'https://compound.cash'
name = 'compound-crypto'
repository = 'https://github.com/compound-finance/compound-chain/'
version = '1.0.0'

[dependencies]
sp-core = { version = '2.0.0', default-features=false, git = 'https://github.com/compound-finance/substrate.git' }
libsecp256k1 = { version = "0.3.2", default-features=false }
tiny-keccak = { version = "2.0.0", features = ["keccak"], default-features = false }
hex = { version = "0.4.2", default-features=false }
lazy_static = "1.4.0"
codec = { package = "parity-scale-codec", version = "1.3.4", default-features=false }
rusoto_core = { version = "0.45.0", optional = true }
rusoto_kms = { version = "0.45.0", optional = true }
tokio = { version = "0.2", optional = true, default-features = false, features = ["tcp", "time", "rt-core", "fs"]}
bytes = { version = "0.5.0", optional = true }
der-parser = { version = "5.0.0", optional = true }
our-std = { path = "../std", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'sp-core/std',
    'hex/std',
    'rusoto_core',
    'rusoto_kms',
    'tokio',
    'bytes',
    'der-parser',
    'our-std/std'
]
