[package]
name = "ethereum-client"
version = "0.1.0"
authors = ['Compound <https://compound.finance>, based on infura-client from Wayne Nilsen <wayne@compound.finance>']
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = 'parity-scale-codec', version = '1.3.4', default-features = false, features = ['derive'] }
ethabi = { version = "12.0.0", default-features = false }
hex = { version = "0.4.2", default-features = false }
serde = { version = "1.0.116", features = ["derive", "alloc"], default-features = false}
serde_json = { version = "1.0.58", features=["alloc"], default-features = false}
frame-support = { default-features = false, version = '2.0.0', git = 'https://github.com/compound-finance/substrate.git' }
sp-io = { version = '2.0.0', default-features = false, git = 'https://github.com/compound-finance/substrate.git', features = ["disable_oom", "disable_panic_handler"]}
sp-runtime = { default-features = false, version = '2.0.0', git = 'https://github.com/compound-finance/substrate.git' }
sp-std = { version = '2.0.0', default-features = false, git = 'https://github.com/compound-finance/substrate.git' }
lazy_static = "1.4.0"
our-std = { path = "../std", default-features = false }

[features]
default = ['std']
std = [
    "codec/std",
    "serde/std",
    "serde_json/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "frame-support/std",
]
