[package]
name = "ethereum-client"
version = "0.1.0"
authors = ['Compound <https://compound.finance>, based on infura-client from Wayne Nilsen <wayne@compound.finance>']
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.33", default-features = false }
ethabi = { version = "12.0.0", default-features = false }
hex = { version = "0.4.2", default-features = false }
serde = { version = "1.0.116", features = ["derive", "alloc"], default-features = false}
serde_json = { version = "1.0.58", features=["alloc"], default-features = false}
frame-support = { default-features = false, version = '2.0.0', git = 'https://github.com/compound-finance/substrate.git', branch = 'hayesgm/updated' }
sp-io = { version = '2.0.0', default-features = false, git = 'https://github.com/compound-finance/substrate.git', branch = 'hayesgm/updated', features = ["disable_oom", "disable_panic_handler"]}
sp-runtime = { default-features = false, version = '2.0.0', git = 'https://github.com/compound-finance/substrate.git', branch = 'hayesgm/updated' }
sp-std = { version = '2.0.0', default-features = false, git = 'https://github.com/compound-finance/substrate.git', branch = 'hayesgm/updated' }

[features]
default = ['std']
std = [
    "serde/std",
    "serde_json/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "frame-support/std",
]
