[package]
name = 'flow-client'
version = '0.1.0'
authors = ['Compound <https://compound.finance>']
edition = '2018'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }
hex = { version = '0.4.2', default-features = false }
serde = { version = '1.0.125', features = ['derive'], default-features = false }
serde_json = { version = '1.0.64', features = ['alloc'], default-features = false }
sp-io = { default-features = false, features = ['disable_oom', 'disable_panic_handler'], git = 'https://github.com/compound-finance/substrate', branch = 'jflatow/compound'}
sp-core = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'jflatow/compound' }
sp-runtime = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'jflatow/compound' }
sp-runtime-interface = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'jflatow/compound' }
sp-std = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'jflatow/compound' }
hex-buffer-serde = { version = "0.3.0", default-features = false, features = ['alloc', 'const_len'] }

our-std = { path = '../our-std', default-features = false }

types-derive = { path = '../types-derive' }

[features]
default = ['std']
std = [
    'codec/std',
    'serde/std',
    'serde_json/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-runtime-interface/std',
    'sp-std/std',
    'our-std/std',
]
runtime-debug = ['our-std/runtime-debug']
