[package]
authors = ['Compound <https://compound.finance>']
build = 'build.rs'
description = 'A Gateway node.'
edition = '2018'
homepage = 'https://compound.cash'
name = 'gateway'
repository = 'https://github.com/compound-finance/gateway/'
version = '1.0.0'
default-run = "gateway"

[[bin]]
name = 'gateway'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }

[dependencies]
hex = "0.4.2"
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"
structopt = '0.3.8'
futures = { version = "0.3.1", features = ["compat"] }

codec = { package = "parity-scale-codec", version = "1.3.4" }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = { version = "1.0.58", features=["alloc"] } # XXX 128 bit also arbitrary_precision creates diff problem?
wasm-timer = "0.2"

# Substrate dependencies
sc-chain-spec = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-client-api = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-cli = { features = ['wasmtime'], git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-client-db = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-core = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-consensus = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-consensus = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-consensus-aura = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-consensus-aura = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-consensus-epochs = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-consensus-slots = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-finality-grandpa = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-finality-grandpa-rpc = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-finality-grandpa = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-executor = { features = ['wasmtime'], git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-inherents = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-keystore = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-keystore = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-network = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-runtime = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-service = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-telemetry = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-transaction-pool = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-transaction-pool = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }

# These dependencies are used for the node's RPCs
sc-rpc = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-api = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-rpc-api = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-blockchain = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-chain-spec = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-block-builder = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-basic-authorship = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-sync-state-rpc = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
substrate-frame-rpc-system = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }

# Used only for runtime benchmarking
frame-benchmarking = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
frame-benchmarking-cli = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master', optional = true }

# Local dependencies
gateway-runtime = { path = '../runtime' }
gateway-crypto = { path = '../gateway-crypto' }
our-std = { path = '../our-std' }
pallet-cash = { path = '../pallets/cash' }
pallet-cash-runtime-api = { path = '../pallets/cash/runtime-api' }
pallet-oracle = { path = '../pallets/oracle' }
runtime-interfaces = { path = '../pallets/runtime-interfaces' }

types-derive = { path = '../types-derive' }

[dev-dependencies]
tempfile = "3.1.0"

sc-consensus-aura = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-keyring = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sc-service-test = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-timestamp = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }

frame-system = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }

[features]
default = ['with-parity-db']
with-parity-db=['sc-client-db/with-parity-db']
with-rocks-db=['sc-client-db/with-kvdb-rocksdb']
runtime-benchmarks = [
	'with-rocks-db',
	'gateway-runtime/runtime-benchmarks',
	'frame-benchmarking-cli',
]
runtime-debug = ['our-std/runtime-debug']
