[package]
authors = ["Compound <https://compound.finance>"]
description = "Things we use from std, in pallets."
edition = "2018"
homepage = "https://compound.cash"
name = "our-std"
repository = "https://github.com/compound-finance/compound-chain/"
version = "0.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", features = ["derive"], default-features = false }
sp-runtime = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-std = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }

our-std-proc-macro = { path = "./proc-macro" }

[features]
default = ["std"]
std = [
    "serde/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-debug = []
