[package]
authors = ['Compound <https://compound.finance>']
edition = '2018'
homepage = 'https://compound.cash'
name = 'gateway-runtime'
repository = 'https://github.com/compound-finance/gateway/'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/compound-finance/substrate', branch = 'master' }

[dependencies]
codec = { package = 'parity-scale-codec', version = '1.3.4' }
hex-literal = { version = '0.3.1', optional = true }
serde = { version = '1.0.101', features = ['derive'], optional = true }

# Substrate dependencies
frame-executive = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
frame-support = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
frame-system = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
frame-system-rpc-runtime-api = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }

sp-api = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-block-builder = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-consensus-aura = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-core = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-inherents = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-offchain = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-runtime = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-session = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-std = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-transaction-pool = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
sp-version = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }

# Used only for runtime benchmarking
frame-benchmarking = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master', optional = true }
frame-system-benchmarking = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master', optional = true }

# Other pallets
pallet-aura = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
pallet-grandpa = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
pallet-randomness-collective-flip = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
pallet-sudo = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
pallet-timestamp = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }
pallet-session = { default-features = false, git = 'https://github.com/compound-finance/substrate', branch = 'master' }

# Local dependencies
pallet-cash = { path = '../pallets/cash', default-features = false }
pallet-cash-runtime-api = { path = '../pallets/cash/runtime-api', default-features = false }

our-std = { path = '../our-std', default-features = false }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-cash/std',
    'pallet-cash-runtime-api/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-session/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
runtime-debug = ['our-std/runtime-debug']
